testsuite/tests/interpreter_errors/circular_dependency/test.out
three.lkql:1:1: error: Circular dependency in LKQL modules (one.lkql -> two.lkql -> three.lkql -> one.lkql)
1 | import one
  | ^^^^^^^^^^
